--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Sesuai QS Al-Hasyr Ayat 18 </p><a href="assets/pdf/Agama/Rentetan Peristiwa 2025
       <div class="card slide"><img src="assets/image/Book/olahraga 1.png" class="card-img" /><h3 class="card-title">Rizky Ridho Masuk Nominasi FIFA 
  </h3><p class="card-desc">Rizky Ridho Masuk Nominasi FIFA Puskas Award 2025,
  Sejajar Bintang Dunia</p><a href="assets/pdf/Olahraga/Artikel Olahraga.pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/olaharaga 2.png" class="card-img" /><h3 class="card-title">Jonatan Cristie Resmi Lolos ke BWF World Tour 
+      <div class="card slide"><img src="assets/image/Book/olahraga 2.png" class="card-img" /><h3 class="card-title">Jonatan Cristie Resmi Lolos ke BWF World Tour 
 Finals 2025</h3><p class="card-desc">Jonatan Cristie Resmi Lolos ke BWF World Tour 
 Finals 2025, Momen Kebangkitan Sang Juara </p><a href="assets/pdf/Olahraga/Jonatan Cristie Resmi Lolos ke BWF World Tour Finals 2025, Momen Kebangkitan Sang Juara.pdf" class="card-btn">Lihat Buku</a></div>
     </div>
@@ -97,9 +97,9 @@ Digital di Sekolah.</p><a href="assets/pdf/Pendidikan/Kabar Muda pendidikan 2.pd
 
     <h2 class="section-title">Artikel Politik</h2>
     <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/Politik Jokowi.png" class="card-img" /><h3 class="card-title">Gugatan Ijazah Palsu Zokowi</h3><p class="card-desc">8 Orang Jadi Tersangka Kasus Isu Ijazah Jokowi, Pengamat Kritik 
+      <div class="card slide"><img src="assets/image/Book/Politik Jokowi.png" class="card-img" /><h3 class="card-title">Gugatan Ijazah Palsu Jokowi</h3><p class="card-desc">8 Orang Jadi Tersangka Kasus Isu Ijazah Jokowi, Pengamat Kritik 
 Potensi Penyalahgunaan Kekuasaan</p><a href="assets/pdf/Politik/POLITIK (1), Kasus isu ijazah palsu Jokowi..pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/Politik khup.png" class="card-img" /><h3 class="card-title">Reformasi KHUP Baru</h3><p class="card-desc">KUHAP Baru Disahkan, Publik Kawal Potensi Penyalahgunaan 
+      <div class="card slide"><img src="assets/image/Book/Politik khup.png" class="card-img" /><h3 class="card-title">Reformasi KUHP Baru</h3><p class="card-desc">KUHAP Baru Disahkan, Publik Kawal Potensi Penyalahgunaan 
 Wewenang</p><a href="assets/pdf/Politik/POLITIK (2), KUHAP Baru Disahkan.pdf" class="card-btn">Lihat Buku</a></div>
     </div>
 
@@ -117,7 +117,7 @@ Melayu</p><a href="assets/pdf/Budaya/Artikel Budaya 2.pdf" class="card-btn">Liha
     <div class="card-grid">
       <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian 
 Diminati</p><a href="assets/pdf/Kuliner/Berita Kuliner.pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likuku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian </p><a href="assets/pdf/Kuliner/Berita Kuliner.pdf" class="card-btn">Lihat Buku</a></div>
+      <!-- <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likuku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian </p><a href="assets/pdf/Kuliner/Berita Kuliner.pdf" class="card-btn">Lihat Buku</a></div> -->
     </div>
   </div>
 </section>
