--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
         <div class="logo"><img src="assets/image/Logo (2).png" alt="" class="logo_img"></div>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="#">Kontak</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Kontak</a></li>
         </ul>
         <a class="btn-primary" href="#">Mulai Baca</a>
     </nav>
@@ -27,7 +27,7 @@
             <a href="#" class="btn-primary">Mulai Baca</a>
         </div>
         <div class="hero-image">
-            <img src="assets/image/Group 3.png" alt="">
+            <img src="assets/image/buku.jpg" alt="">
         </div>
     </section>
 
