--- a/aboutus.html
+++ b/aboutus.html
@@ -10,10 +10,15 @@
 
 <body>
 
-<!-- NAVBAR -->
 <nav class="navbar">
     <div class="logo">
         <img src="assets/image/Logo (2).png" alt="Kabar Muda Logo" class="logo_img">
+    </div>
+
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
     <ul class="nav-links">
@@ -24,6 +29,7 @@
 
     <a class="btn-primary" href="#">Mulai Baca</a>
 </nav>
+
 
 <!-- HERO SECTION -->
 <section class="about-hero fade-in">
@@ -200,7 +206,6 @@
 <footer class="footer">
     © 2025 Kabar Muda - All Rights Reserved
 </footer>
-
 <script src="script.js"></script>
 
 </body>
