--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-        <div class="logo"><img src="assets/image/Logo (2).png" alt="" class="logo_img"></div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Kontak</a></li>
-        </ul>
-        <a class="btn-primary" href="#">Mulai Baca</a>
-    </nav>
+    <div class="logo">
+        <img src="assets/image/Logo (2).png" alt="Kabar Muda Logo" class="logo_img">
+    </div>
+
+    <div class="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <ul class="nav-links">
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="contact.html">Kontak</a></li>
+    </ul>
+
+    <a class="btn-primary" href="#">Mulai Baca</a>
+</nav>
+
 
     <!-- HERO SECTION -->
     <section class="hero fade-in">
