--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,7 @@
             <img src="assets/image/People/dandi .jpeg" alt="">
             <h3>Dandi Alfazri Johan</h3>
             <p class="nim">2370233010</p>
-            <span class="role redaktur">Redaktur</span>
+            <span class="role redaktur">Pemimpin Redaksi</span>
         </div>
 
         <!-- FATHAN / REDAKTUR -->
