--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-    <div class="logo">
-        <img src="assets/image/Logo (2).png" alt="Kabar Muda Logo" class="logo_img">
-    </div>
+        <div class="logo">
+            <img src="assets/image/Logo (2).png" alt="Kabar Muda Logo" class="logo_img">
+        </div>
 
-    <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
 
-    <ul class="nav-links">
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="contact.html">Kontak</a></li>
-    </ul>
+        <ul class="nav-links">
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="contact.html">Kontak</a></li>
+        </ul>
 
-    <a class="btn-primary" href="#">Mulai Baca</a>
-</nav>
-
+        <a class="btn-primary" href="#">Mulai Baca</a>
+    </nav>
 
     <!-- HERO SECTION -->
     <section class="hero fade-in">
@@ -43,118 +42,91 @@
     </section>
 
     <!-- KENAPA HARUS KABAR MUDA -->
-   <section class="why fade-in">
-    <div class="why-image">
-        <img src="assets/image/Ebook elegir_ Estanterías en la pantalla de la tecnología digital de educación inteligente de teléfonos inteligentes para aprender el concepto de dibujos animados _ Vector Premium 1.png" alt="Kenapa Kabar Muda">
-    </div>
+    <section class="why fade-in">
+        <div class="why-image">
+            <img src="assets/image/Ebook elegir_ Estanterías en la pantalla de la tecnología digital de educación inteligente de teléfonos inteligentes para aprender el concepto de dibujos animados _ Vector Premium 1.png" alt="Kenapa Kabar Muda">
+        </div>
 
-    <div class="why-content">
-        <h2><span>Kenapa</span> Harus Kabar Muda?</h2>
-        <ul>
-            <li><strong>Perspektif Segar</strong> – Artikel dari sudut pandang generasi muda.</li>
-            <li><strong>Informasi Singkat</strong> – Padat dan mudah dipahami.</li>
-            <li><strong>Dibangun anak muda</strong> – Autentik dan relevan.</li>
-        </ul>
-    </div>
-</section>
+        <div class="why-content">
+            <h2><span>Kenapa</span> Harus Kabar Muda?</h2>
+            <ul>
+                <li><strong>Perspektif Segar</strong> – Artikel dari sudut pandang generasi muda.</li>
+                <li><strong>Informasi Singkat</strong> – Padat dan mudah dipahami.</li>
+                <li><strong>Dibangun anak muda</strong> – Autentik dan relevan.</li>
+            </ul>
+        </div>
+    </section>
 
-
-
-</section>
+    <!-- (kamu tadi ada </section> nyasar di sini, sebaiknya dihapus) -->
 
     <!-- APA YANG MEMBUAT UNIK -->
-   <section class="unique-section fade-in">
-    <div class="unique-content">
-        <h2><span>Apa</span> yang Membuat Kabar Muda Unik?</h2>
-        <p>
-            Kami memberikan ruang edukasi, hiburan, dan diskusi bagi generasi muda.
-        </p>
-        <a href="#" class="primary-btn">Kenali Kabar Muda</a>
-    </div>
+    <section class="unique-section fade-in">
+        <div class="unique-content">
+            <h2><span>Apa</span> yang Membuat Kabar Muda Unik?</h2>
+            <p>
+                Kami memberikan ruang edukasi, hiburan, dan diskusi bagi generasi muda.
+            </p>
+            <a href="#" class="primary-btn">Kenali Kabar Muda</a>
+        </div>
 
-    <div class="unique-image">
-        <img src="assets/image/Group 10.png" alt="Kabar Muda">
-    </div>
-</section>
+        <div class="unique-image">
+            <img src="assets/image/Group 10.png" alt="Kabar Muda">
+        </div>
+    </section>
 
-
-<!-- ARTIKEL 6 KATEGORI TANPA CAROUSEL -->
-<section class="artikel-wrapper">
-  <div class="container">
-    <h2 class="section-title">Artikel Agama</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/agama.png" class="card-img" /><h3 class="card-title">Rentetan Peristiwa 2025 Jadi Momentum Muhasabah Umat Islam</h3><p class="card-desc">Rentetan Peristiwa 2025 Jadi Momentum Muhasabah Umat Islam  
+    <!-- ARTIKEL 6 KATEGORI TANPA CAROUSEL -->
+    <section class="artikel-wrapper">
+      <div class="container">
+        <h2 class="section-title">Artikel Agama</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/agama.png" class="card-img" /><h3 class="card-title">Rentetan Peristiwa 2025 Jadi Momentum Muhasabah Umat Islam</h3><p class="card-desc">Rentetan Peristiwa 2025 Jadi Momentum Muhasabah Umat Islam  
 Sesuai QS Al-Hasyr Ayat 18 </p><a href="assets/pdf/Agama/Rentetan Peristiwa 2025 Jadi Momentum Muhasabah Umat Islam.pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/agama.png" class="card-img" /><h3 class="card-title">Setelah ‘Perang’ Politik</h3><p class="card-desc">Setelah ‘Perang’ Politik: Desember Jadi Ujian Berat Moderasi Beragama</p><a href="assets/pdf/Agama/Berita Keagamaan 1.pdf" class="card-btn">Lihat Buku</a></div>
-    </div>
+          <div class="card slide"><img src="assets/image/Book/agama.png" class="card-img" /><h3 class="card-title">Setelah ‘Perang’ Politik</h3><p class="card-desc">Setelah ‘Perang’ Politik: Desember Jadi Ujian Berat Moderasi Beragama</p><a href="assets/pdf/Agama/Berita Keagamaan 1.pdf" class="card-btn">Lihat Buku</a></div>
+        </div>
 
-    <h2 class="section-title">Artikel Olahraga</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/olahraga 1.png" class="card-img" /><h3 class="card-title">Rizky Ridho Masuk Nominasi FIFA 
+        <h2 class="section-title">Artikel Olahraga</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/olahraga 1.png" class="card-img" /><h3 class="card-title">Rizky Ridho Masuk Nominasi FIFA 
  </h3><p class="card-desc">Rizky Ridho Masuk Nominasi FIFA Puskas Award 2025,
  Sejajar Bintang Dunia</p><a href="assets/pdf/Olahraga/Artikel Olahraga.pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/olahraga 2.png" class="card-img" /><h3 class="card-title">Jonatan Cristie Resmi Lolos ke BWF World Tour 
+          <div class="card slide"><img src="assets/image/Book/olahraga 2.png" class="card-img" /><h3 class="card-title">Jonatan Cristie Resmi Lolos ke BWF World Tour 
 Finals 2025</h3><p class="card-desc">Jonatan Cristie Resmi Lolos ke BWF World Tour 
 Finals 2025, Momen Kebangkitan Sang Juara </p><a href="assets/pdf/Olahraga/Jonatan Cristie Resmi Lolos ke BWF World Tour Finals 2025, Momen Kebangkitan Sang Juara.pdf" class="card-btn">Lihat Buku</a></div>
-    </div>
+        </div>
 
-    <h2 class="section-title">Artikel Pendidikan</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/Pendidikan.png" class="card-img" /><h3 class="card-title">Prabowo Resmikan Smartboard</h3><p class="card-desc">Siap Sambut Sekolah Masa Depan, Prabowo Resmikan Smartboard Canggih untuk 
+        <h2 class="section-title">Artikel Pendidikan</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/Pendidikan.png" class="card-img" /><h3 class="card-title">Prabowo Resmikan Smartboard</h3><p class="card-desc">Siap Sambut Sekolah Masa Depan, Prabowo Resmikan Smartboard Canggih untuk 
 Siswa SMPN 4 Bekasi </p><a href="assets/pdf/Pendidikan/Kabar Muda pendidikan 1 (1).pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/Pendidikan.png" class="card-img" /><h3 class="card-title">Kolaborasi Kemendikdasmen dan Canva </h3><p class="card-desc">Kolaborasi Kemendikdasmen dan Canva Menggali Kreativitas dan Inovasi 
+          <div class="card slide"><img src="assets/image/Book/Pendidikan.png" class="card-img" /><h3 class="card-title">Kolaborasi Kemendikdasmen dan Canva </h3><p class="card-desc">Kolaborasi Kemendikdasmen dan Canva Menggali Kreativitas dan Inovasi 
 Digital di Sekolah.</p><a href="assets/pdf/Pendidikan/Kabar Muda pendidikan 2.pdf" class="card-btn">Lihat Buku</a></div>
-    </div>
+        </div>
 
-    <h2 class="section-title">Artikel Politik</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/Politik Jokowi.png" class="card-img" /><h3 class="card-title">Gugatan Ijazah Palsu Jokowi</h3><p class="card-desc">8 Orang Jadi Tersangka Kasus Isu Ijazah Jokowi, Pengamat Kritik 
+        <h2 class="section-title">Artikel Politik</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/Politik Jokowi.png" class="card-img" /><h3 class="card-title">Gugatan Ijazah Palsu Jokowi</h3><p class="card-desc">8 Orang Jadi Tersangka Kasus Isu Ijazah Jokowi, Pengamat Kritik 
 Potensi Penyalahgunaan Kekuasaan</p><a href="assets/pdf/Politik/POLITIK (1), Kasus isu ijazah palsu Jokowi..pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/Politik khup.png" class="card-img" /><h3 class="card-title">Reformasi KUHP Baru</h3><p class="card-desc">KUHAP Baru Disahkan, Publik Kawal Potensi Penyalahgunaan 
+          <div class="card slide"><img src="assets/image/Book/Politik khup.png" class="card-img" /><h3 class="card-title">Reformasi KUHP Baru</h3><p class="card-desc">KUHAP Baru Disahkan, Publik Kawal Potensi Penyalahgunaan 
 Wewenang</p><a href="assets/pdf/Politik/POLITIK (2), KUHAP Baru Disahkan.pdf" class="card-btn">Lihat Buku</a></div>
-    </div>
+        </div>
 
-    <h2 class="section-title">Artikel Budaya</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/Budaya.png" class="card-img" /><h3 class="card-title">Kementerian Kebudayaan RI Tetapkan Istana Siak Menjadi 
+        <h2 class="section-title">Artikel Budaya</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/Budaya.png" class="card-img" /><h3 class="card-title">Kementerian Kebudayaan RI Tetapkan Istana Siak Menjadi 
 Museum</h3><p class="card-desc">Kementerian Kebudayaan RI Tetapkan Istana Siak Menjadi 
 Museum</p><a href="assets/pdf/Budaya/Artikel Budaya 1.pdf" class="card-btn">Lihat Buku</a></div>
-      <div class="card slide"><img src="assets/image/Book/Budaya.png" class="card-img" /><h3 class="card-title">Budaya Aceh Tamiang Tidak Berbeda dengan Budaya 
+          <div class="card slide"><img src="assets/image/Book/Budaya.png" class="card-img" /><h3 class="card-title">Budaya Aceh Tamiang Tidak Berbeda dengan Budaya 
 Melayu</h3><p class="card-desc">Budaya Aceh Tamiang Tidak Berbeda dengan Budaya 
 Melayu</p><a href="assets/pdf/Budaya/Artikel Budaya 2.pdf" class="card-btn">Lihat Buku</a></div>
-    </div>
+        </div>
 
-    <h2 class="section-title">Artikel Kuliner</h2>
-    <div class="card-grid">
-      <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian 
+        <h2 class="section-title">Artikel Kuliner</h2>
+        <div class="card-grid">
+          <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian 
 Diminati</p><a href="assets/pdf/Kuliner/Berita Kuliner.pdf" class="card-btn">Lihat Buku</a></div>
-      <!-- <div class="card slide"><img src="assets/image/Book/kuliner.png" class="card-img" /><h3 class="card-title">Ayam Nasi Likuku</h3><p class="card-desc">Ayam Nasi Likku, Kuliner Khas Jambi dengan Cita Rasa Gurih Pedas yang Kian </p><a href="assets/pdf/Kuliner/Berita Kuliner.pdf" class="card-btn">Lihat Buku</a></div> -->
-    </div>
-  </div>
-</section>
-
-
-
-<!-- JS Carousel Script -->
-<script>
-function moveCarousel(id, direction) {
-  const carousel = document.getElementById(id);
-  const track = carousel.querySelector('.carousel-track');
-  const slideWidth = carousel.querySelector('.slide').offsetWidth + 20; // card + gap
-
-  carousel.current = (carousel.current || 0) + direction;
-
-  const totalSlides = track.children.length;
-  const maxIndex = totalSlides - 1;
-
-  if (carousel.current < 0) carousel.current = maxIndex;
-  if (carousel.current > maxIndex) carousel.current = 0;
-
-  track.style.transform = `translateX(-${carousel.current * slideWidth}px)`;
-}
-</script>
-
-
+        </div>
+      </div>
+    </section>
 
     <!-- CTA -->
     <section class="cta fade-in">
@@ -189,8 +161,11 @@ function moveCarousel(id, direction) {
             <button>Subscribe</button>
         </div>
     </footer>
-   <script>
+
+    <!-- SCRIPT UTAMA -->
+    <script>
 document.addEventListener("DOMContentLoaded", () => {
+    // ANIMASI FADE-IN
     const elements = document.querySelectorAll(".fade-in");
 
     const observer = new IntersectionObserver((entries) => {
@@ -202,6 +177,17 @@ document.addEventListener("DOMContentLoaded", () => {
     }, { threshold: 0.2 });
 
     elements.forEach(el => observer.observe(el));
+
+    // NAVBAR HAMBURGER TOGGLE
+    const hamburger = document.querySelector(".hamburger");
+    const navLinks = document.querySelector(".nav-links");
+
+    if (hamburger && navLinks) {
+        hamburger.addEventListener("click", () => {
+            navLinks.classList.toggle("active");
+            hamburger.classList.toggle("open");
+        });
+    }
 });
 
 /* -------------------------------
@@ -212,25 +198,19 @@ function moveCarousel(id, direction) {
     const track = carousel.querySelector(".carousel-track");
     const slide = carousel.querySelector(".slide");
 
-    // Hitung lebar satu slide + gap
     const slideWidth = slide.offsetWidth + 20;
 
-    // Current index
     carousel.current = (carousel.current || 0) + direction;
 
     const totalSlides = track.children.length;
     const maxIndex = totalSlides - 1;
 
-    // Loop ulang ketika habis
     if (carousel.current < 0) carousel.current = maxIndex;
     if (carousel.current > maxIndex) carousel.current = 0;
 
-    // Geser
     track.style.transform = `translateX(-${carousel.current * slideWidth}px)`;
 }
 </script>
-
-
 
 </body>
 </html>
